Simplify Game and GameRunner